kube/ghost/service-ghost.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ghost
    release: ghost
  name: ghost
  namespace: ghost
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: ghost
  sessionAffinity: ClientIP
  type: ClusterIP
