kube/ghost/service-mariadb.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb
    release: ghost
  name: ghost-mariadb
  namespace: ghost
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: mysql
  selector:
    app: mariadb
    release: ghost
  sessionAffinity: None
  type: ClusterIP
